--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 		<!-- Custom styles for this template -->
 		<link href="css/jquery.bxslider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
 	</head>
 	<body>
 		<!-- Navigation -->
@@ -30,21 +31,16 @@
 				</div>
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="#about">Lifestyle</a></li>
-						<li><a href="#contact">Travel</a></li>
-						<li><a href="#contact">Fashion</a></li>
-						<li><a href="about.html">About Me</a></li>
-						<li><a href="about.html">Contact</a></li>
+						<li class="active"><a href="index.html"><span style="color: rgb(0, 196, 68)">Enem Tô Top</span></a></li>
+						<li><a href="#conteudo">Postagens</a></li>
+						<li><a href="about.html">Sobre Nós</a></li>
+						<li><a href="about.html">Contato</a></li>
 					</ul>
 
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="#"><i class="fa fa-reddit"></i></a></li>
 					</ul>
 
 				</div>
@@ -61,18 +57,14 @@
 				<div class="col-md-12">
 					<article class="blog-post">
 						<div class="blog-post-body">
-							<h2><a href="post.html">About Author</a></h2>
+							<h2><a href="post.html">Sobre o Enem Tô Top</a></h2>
 							<div class="blog-post-text">
 
-								<p>A newly-developed mathematical method can detect geometric structure in neural activity in the brain. “Previously, in order to understand this structure, scientists needed to relate neural activity to some specific external stimulus,” said Vladimir Itskov, associate professor of mathematics at Penn State University. “Our method is the first to be able to reveal this structure without our knowing an external stimulus ahead of time. We’ve now shown that our new method will allow us to explore the organizational structure of neurons without knowing their function in advance.”</p>
+                                <p><strong>Você que sofre com a pressão</strong> de tudo e todos pra passar no <strong>vestibular</strong> (incluindo de você mesmo) e acha que já é suficiente 10+ horas de escola/cursinho e estudo em casa por dia, <strong>já se sentiu</strong> alguma vez <strong>desmotivado e sem rumo nesse momento tão importante da sua vida?</strong> Então o Enem tô Top é pra você (e mesmo que você nao esteja na situação, afinal é um blog sensacional)!</p>
+<p>A gente, que passou por esse drama pelos últimos 2-4 anos, vai escrever pra <strong>te ajudar a se manter motivado</strong> nesse momento tão difícil, pra você <strong>escolher seu curso com maior certeza</strong>, porque a gente sabe que isso não é fácil, e, é claro, a <strong>maximizar seu tempo e a estudar melhor</strong>, mas numa pegada diferente, que fala sua língua. Afinal, <strong>a gente já passou por isso e sente sua dor</strong> #tamojunto!</p>
 
-								<p>“The traditional methods used by researchers to analyze the relationship between the activities of neurons were adopted from physics,” said Carina Curto, associate professor of mathematics at Penn State, “but neuroscience data doesn’t necessarily play by the same rules as data from physics, so we need new tools. Our method is a first step toward developing a new mathematical toolkit to uncover the structure of neural circuits with unknown function in the brain.”</p>
-
-								<h3>Math reveals structure in neural activity in the brain</h3>
-								<p>The method — clique topology — was developed by an interdisciplinary team of researchers at Penn State, the University of Pennsylvania, the Howard Hughes Medical Institute, and the University of Nebraska-Lincoln. The method is described in a paper that will be posted in the early online edition of the journal Proceedings of the National Academy of Sciences during the week ending October 23, 2015.</p>
-
-								<p>“We have adopted approaches from the field of algebraic topology that previously had been used primarily in the domain of pure mathematics and have applied them to experimental data on the activity of place cells — specialized neurons in the part of the brain called the hippocampus that sense the position of an animal in its environment,” said Curto.</p>
-							</div>
+                                <p>Se você quiser ficar <strong>sempre por dentro</strong> e receber os conteúdos recém saídos do forno, <strong>...
+                                
 						</div>
 					</article>
 				</div>
@@ -85,15 +77,13 @@
 			<div class="footer-socials">
 				<a href="#"><i class="fa fa-facebook"></i></a>
 				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-instagram"></i></a>
 				<a href="#"><i class="fa fa-google-plus"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-reddit"></i></a>
 			</div>
 
 			<div class="footer-bottom">
 				<i class="fa fa-copyright"></i> Copyright 2015. All rights reserved.<br>
 				Theme made by <a href="http://www.moozthemes.com">MOOZ Themes</a>
+                and changed by Second Team Gama
 			</div>
 		</footer>
 
