Lançamento do teste vocacional no menu

--- a/nav.html
+++ b/nav.html
@@ -14,6 +14,7 @@
 				<li><a href="index.php#conteudo">Blog</a></li>
 				<li><a href="sobre.php">Sobre Nós</a></li>
 				<li><a href="post.php?id=5">Ebook</a></li>
+				<li><a href="post.php?id=9&titulo=DESCUBRA%20SUA%20VOCAÇÃO">Teste Vocacional</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="https://www.facebook.com/Enemtotop/"><i class="fa fa-facebook"></i></a></li>
