Lançamento do "Sua história no ENEM" no nav
Lançamento do "Sua história no ENEM" no nav

--- a/nav.html
+++ b/nav.html
@@ -15,6 +15,7 @@
 				<li><a href="sobre.php">Sobre Nós</a></li>
 				<li><a href="post.php?id=5">Ebook</a></li>
 				<li><a href="post.php?id=9&titulo=DESCUBRA%20SUA%20VOCAÇÃO">Teste Vocacional</a></li>
+				<li><a href="historias.php">Sua História do Enem</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="https://www.facebook.com/Enemtotop/"><i class="fa fa-facebook"></i></a></li>
