--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.php"><span style="color: rgb(0, 196, 68)">Enem Tô Top</span></a></li>
+				<li class="active"><a href="index.php"><span style="color: rgb(0, 196, 68)"><i class="fa fa-trophy" aria-hidden="true"></i> Enem Tô Top</span></a></li>
 				<li><a href="index.php#conteudo">Blog</a></li>
 				<li><a href="sobre.php">Sobre Nós</a></li>
 				<li><a href="post.php?id=5">Ebook</a></li>
