--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div id="footer-logo">
-        <img src="images/smallLogo.JPG" width="200px" style="margin-bottom: -25px; margin-top: 50px" />
+        <img src="images/smallLogo.JPG" width="200px" style="margin-bottom: -25px; margin-top: 50px" alt="ENEM TÔ TOP" />
     </div>
 	<div class="footer-socials">
 		<a href="https://www.facebook.com/Enemtotop/"><i class="fa fa-facebook"></i></a>
